[package]
name = "apibot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = { version = "3.2.6", features = ["derive"] }
dirs = "4.0.0"
http = "0.2.8"
prettytable-rs = "0.8.0"
reqwest = { version = "0.11.11", features = ["blocking"] }
rusqlite = "0.27.0"
serde = "1.0.137"
serde_json = "1.0.81"
tokio = { version = "1.19.2", features = ["full"] }
